lesson11/css/towns/small.css
body {
    font-family: "Rubik", Arial, Helvetica, sans-serif;
}

#pancakeDay {
    display: none;
    text-align: center;
    padding: 10px;
    margin: 0 auto;
    color: #31003C;
    background-color: #ada7c9;
}

header {
    background-color: #000025;
    height: 100px;
    margin: 0;
}

header div {
    margin-left: auto;
    margin-right: auto;
}

header h1 {
    color: #FFFFFF;
    margin: 0;
    padding-top: 30px;
    font-size: 1.4em;
    text-align: center;
    padding-right: 10px;
}

header img {
    float: left;
    max-width: 100px;
}

header div p {
    margin: 0;
    padding-right: 15px;
    text-align: center;
    color: #FFFFFF;
}

hr {
    margin: 0 auto;
    color: #FFFFFF;
}

nav {
    clear: left;
    margin: 0;
    width: 100%;
}

nav button {
    display: block;
    margin: 0 auto;
    width: 100%;
    border: none;
    padding: 13px 0;
    text-align: center;
    background-color: #31003C;
    font-weight: bold;
    border-bottom: 1px dotted #90a8c3;
    color: #ada7c9;
}


nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

nav ul li {
    border-bottom: 5px;
}

nav ul li a {
    display: block;
    padding: 13px 0;
    text-decoration: none;
    text-align: center;
    padding-left: 0;
    margin-left: auto;
    margin-right: auto;
    background-color: #31003C;
    font-weight: bold;
    border-bottom: 1px dotted #90a8c3;
}

nav ul li a:link {
    color: #ada7c9;

}

nav ul li a:visited {
    color: #ada7c9;
}

nav ul li a:hover,
nav button:hover {
    color: #31003C;
    background-color: #ada7c9;
}

nav ul li a:active {
    color: white;
    background-color: #90a8c3;
}

main {
    padding-bottom: 5px;
    margin: 0 15px;
}

main h2 {
    text-align: center;
    margin: 0;
    color: #161b33;
    padding: 20px 0;
}

section {
    background-color: white;
    margin-bottom: 20px;
}

section h3 {
    padding: 10px;
    margin: 0 0 10px 0;
    color: #161b33;
}

section div h3 {
    text-align: center;
    padding-bottom: 0;
    color: #31003C;
}

.heroDiv {
    position: relative;
    margin-bottom: 20px;
}

/* Weather Summary */

.weatherSummary {
    position: absolute;
    margin: 10px;
    max-width: 300px;
    width: 85%;
    margin-bottom: 0;
    padding: 10px;
    background-color: #ada7c9c2;

}

.weatherSummary h3 {
    color: #31003C;
    padding: 0;
    border: none;
    margin: 0;
}

.weatherSummary hr {
    margin-bottom: 10px;
    margin-top: 0;
    color: #31003C;
}

.sumgrid {
    display: flex;
}

.sumgrid h4,
.sumgrid p {
    flex: 1 1;
    margin: 0;
    padding: 0;
    color: #31003C;
}

.sumgrid h4 {
    text-align: right;
    padding-right: 10px;
}

#condition {
    text-transform: capitalize;
}

img {
    width: 100%;
}

footer {
    text-align: center;
    background-color: #31003C;
    padding: 15px;
    font-size: 0.8em;
    color: #ada7c9;
    border: 1px dotted #90a8c3;
}

footer a {
    color: #ada7c9;
    text-decoration: none;
}

.current {
    text-decoration: underline;
    background-color: #ada7c9;
    color: #31003C !important;
}

.showMenu {
    display: block;
}

.hide {
    display: none;
}

article h3 {
    margin: 0;
    padding: 0;
}

#fiveDay {
    display: none;
}

#dayArticle {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 15px;
    background-color: #ada7c9;
}

#dayArticle div {
    order: 1;
}

#articleImage {
    order: 2;
}

#contactSection {
    background-color: #ada7c9;
    padding: 15px;
}

#contactSection div {
    margin-bottom: 20px;
}

#contact {
    list-style-type: none;
}

#contact {
    padding: 0;
    margin: 0;
}

#contact li {
    margin-bottom: 10px;
    margin-left: 0;
    padding-left: 0;
    text-align: center;
    color: #31003C;
}

#map {
    display: block;
    max-width: 98%;
    margin: 0 auto;
    width: 600px;
    height: 340px;
    border: 2px solid #31003C;
    border-radius: 10px;
}

#socials {
    display: flex;
    justify-content: center;
    list-style: none;
    padding: 0;
    margin: 0;
}

#socials li {
    padding: 0;
    margin: 0;
    list-style-type: none;
    flex: 0 1 auto;
    width: 60px;
}

.svg:hover {
    filter:
        invert(0.5) sepia(1) hue-rotate(220deg) saturate(4) brightness(.5);
}

li img {
    display: block;
    margin: 0 auto;
    width: 30px;
}

#eventLayout {
    border: 3px solid #31003C;
}

#eventLayout h3, #eventLayout div{
    text-align: center;
}

.events li {
    list-style-type: none;
}

.events ul {
    margin:0;
    padding:0;
}

